k8s/local/operator/simple-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: simple-api-route
  namespace: gptmingdom
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/api/v1`)
      kind: Rule
      services:
        - name: fleet-operator
          port: 8080
